corregir errores: + agregar final´s + inicilizar todo + pasar a observableList()